# rustudy

algorithms/: Cargo.toml
algorithms/demos/: Cargo.toml
algorithms/demos/src/: base_converter.rs  calculator.rs  main.rs  par_checker.rs
algorithms/demos/src/calculator/: infix_to_suffix.rs  suffix_eval.rs
data_structures/src/: stack.rs
examples/httpie/: Cargo.toml
examples/pwdg/: Cargo.toml
examples/pwdg/encryptor/src/: password.rs
examples/pwdg/hash/src/: merhash.rs
examples/pwdg/main/src/: main.rs
examples/thumbor/: Cargo.toml  abi.proto
examples/thumbor/src/: main.rs
examples/thumbor/src/engine/: mod.rs  photon.rs
examples/thumbor/src/pb/: abi.rs  mod.rs
httpie/src/: main.rs
pwdg/encryptor/: Cargo.toml
pwdg/main/: Cargo.toml
scrape_url/: Cargo.toml
scrape_url/src/: main.rs
