[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
anyhow = "1"
base64 = "0.22"
bytes = "1"
image = "0.25"
lazy_static = "1"
lru = "0.12"
percent-encoding = "2"
photon-rs = "0.3"
prost = "0.12"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.5", features = [
    "add-extension",
    "compression-full",
    "trace",
] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.12"
